--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9dc76b2",
+   "id": "87f6fb92",
    "metadata": {},
    "source": [
     "# Golf Model"
@@ -10,20 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fd9f6b9e",
+   "execution_count": 9,
+   "id": "80570cd9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import csv\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2221a1d3",
+   "execution_count": 10,
+   "id": "6b616a9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ff33fb20",
+   "execution_count": 11,
+   "id": "ad206748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +61,64 @@
     "years_of_interest = range(2019, datetime.now().year + 1)\n",
     "\n",
     "# Specify the event_id for the U.S. Open or other major tournaments\n",
-    "event_ids = {'U.S. Open': '535'}  # Add other event IDs as needed\n",
-    "\n",
+    "event_ids = {'U.S. Open': '535'}  # Add other event IDs as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ace4c9d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: /mnt: Read-only file system\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir -p /mnt/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7bb72190",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: /mnt/data: No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls /mnt/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c3ea2101",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/mnt/data/golf_data.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Create a file to store the CSV data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/mnt/data/golf_data.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnewline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      3\u001b[0m     writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mwriter(file)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m# Write the header row\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/mnt/data/golf_data.csv'"
+     ]
+    }
+   ],
+   "source": [
     "# Create a file to store the CSV data\n",
     "with open('/mnt/data/golf_data.csv', 'w', newline='') as file:\n",
     "    writer = csv.writer(file)\n",
@@ -100,7 +157,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2eb393f",
+   "id": "db6f82eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Specify the path to the CSV file\n",
+    "csv_file_path = '/mnt/data/golf_data.csv'\n",
+    "\n",
+    "# Now, read the CSV file into a DataFrame\n",
+    "golf_data_df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "# Show the first few rows of the DataFrame\n",
+    "print(golf_data_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98df2129",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -108,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e1e666",
+   "id": "acb7b39d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -116,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb44f5f",
+   "id": "e864852a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -124,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0e2f8c",
+   "id": "e8d29cdd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -132,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83cab05b",
+   "id": "55ac1173",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d11eac5",
+   "id": "22c8a5ce",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a400948c",
+   "id": "7b383a7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,15 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3370d6b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d120897",
+   "id": "89734877",
    "metadata": {},
    "outputs": [],
    "source": []
